srm-server: use URLDecoder#decode(String s, Charset cs)
Motivation:
Avoid dynamic charset discovery to simplify code.

Modification:
use URLDecoder#decode(String s, Charset cs)

Result:
Same functionality, simpler code.

Acked-by: Lea Morschel
Target: master
Require-book: no
Require-notes: no